--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <script src="https://xgqfrms.github.io/HTML5/lib/hack/html5shiv-3.7.3.min.js"></script>
       <script src="https://xgqfrms.github.io/HTML5/lib/hack/respond-1.4.2.min.js"></script>
     <![endif]-->
-    <title>demo template</title>
+    <title>JS: Flash Detector</title>
     <style>
       .wiki-main-content {
           padding-top: 30px!important;
