--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
     <h1>Hello, world!</h1>
     <div>
       <a href="http://xgqfrms.xyz">http://xgqfrms.xyz</a><br>
-      <a href="https://xgqfrms.xyz">https://xgqfrms.xyz</a>
+      <a href="https://xgqfrms.xyz">https://xgqfrms.xyz</a><br>
+       <a href="swfobject/index.html">swfobject/index.html</a><br>
+      
     </div>
     <!-- Draft: JSX Specification -->
     <div>
