--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
     <div>
       <a href="http://xgqfrms.xyz">http://xgqfrms.xyz</a><br>
       <a href="https://xgqfrms.xyz">https://xgqfrms.xyz</a><br>
-       <a href="swfobject/index.html">swfobject/index.html</a><br>
-      
+      <a href="swfobject/index.html">swfobject/index.html</a><br> 
+      <a href="swfobject/index_dynamic.html">wfobject/index_dynamic.html</a><br> 
+      <a href="swfobject_generator/air/index.html">swfobject_generator/air/index.html</a><br> 
+      <a href="swfobject_generator/html/index.html">swfobject_generator/html/index.html</a><br> 
     </div>
     <!-- Draft: JSX Specification -->
     <div>
