--- a/swfobject_generator/html/index.html
+++ b/swfobject_generator/html/index.html
@@ -80,7 +80,13 @@
 				var ac = document.getElementById("alternativeContent").value;
 				var o;
 				var e = " />";
-				if (doct == "html4transitional") {
+// **************************** HTML5 *******************************************************************************************
+				if (doct == "html5") {
+					o = "<!DOCTYPE HTML">";
+					o += "\n<html>";
+					e = ">";
+				}
+				else if (doct == "html4transitional") {
 					o = "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.01 Transitional//EN\" \"http://www.w3.org/TR/html4/loose.dtd\">";
 					o += "\n<html>";
 					e = ">";
