--- a/swfobject_generator/html/index.html
+++ b/swfobject_generator/html/index.html
@@ -703,6 +703,7 @@
 				</div>
 				<div class="col2">
 					<select id="htmlTemplate" name="htmlTemplate">
+						<option value="html5">HTML5</option>
 		  				<option value="xhtml1strict">XHTML 1.0 Strict</option>
 						<option value="xhtml1transitional">XHTML 1.0 Transitional</option>
 						<option value="html4strict">HTML 4.01 Strict</option>
